syntax = "proto3";

package recipes;
option go_package = "cookbook/rpc/cookbookpb";

// Cookbook is a collection of recipes.
service Cookbook {
    rpc GetRecipeById(GetRecipeByIdRequest) returns (Recipe);
    rpc InsertRecipe(Recipe) returns (InsertRecipeResponse);
}

message GetRecipeByIdRequest {
    int64 id = 1;
}

message InsertRecipeResponse {
    int64 id = 1;
    string errors = 2;
}

message Recipe {
    int64 id = 1;
    string title = 2;
    string description = 3;
    repeated Ingredient ingredients = 4;
    repeated Instruction instructions = 5;
}

message Ingredient {
    string label = 1;
    Unit unit = 2;
    float amount = 3;
}

message Unit {
    string label = 1;
}

message Instruction {
    int32 step = 1;
    string text = 2;
}
